@@ -47,7 +47,7 @@ import org.ikasan.spec.configuration.Configured;
 import org.ikasan.spec.configuration.ConfiguredResource;
 import org.jmock.Expectations;
 import org.jmock.Mockery;
-import org.jmock.lib.legacy.ClassImposteriser;
+import org.jmock.imposters.ByteBuddyClassImposteriser;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -63,7 +63,7 @@ public class DefaultMessageFilterTest
     /** A {@link Mockery} for mocking interfaces */
     private Mockery mockery = new Mockery()
     {{
-            setImposteriser(ClassImposteriser.INSTANCE);
+            setImposteriser(ByteBuddyClassImposteriser.INSTANCE);
     }};
 
     /** A mocked {@link FilterRule} */
@@ -145,7 +145,7 @@ public class DefaultMessageFilterTest
         Filter<String> filter = new DefaultMessageFilter(simpleFilterRule);
 
         ((ConfiguredResource)filter).setConfiguredResourceId("myConfId");
-        ((ConfiguredResource)filter).setConfiguration(new Integer(1));
+        ((ConfiguredResource)filter).setConfiguration(Integer.valueOf(1));
 
         String filteredMessage = filter.filter(messageToFilter);
         Assert.assertNotNull(filteredMessage);
