@@ -85,7 +85,7 @@ public class FileFilterApplication
                 String fileFilterJson = mapper.writeValueAsString(fileFilter);
 
                 this.systemEventService.logSystemEvent(fileFilter.getClientId() +"_"+ fileFilter.getCriteria(),
-                    String.format("File Filter deleted [%s]", fileFilterJson), UserUtil.getUser()
+                    "File Filter deleted [%s]".formatted(fileFilterJson), UserUtil.getUser()
                                                       );
             }
             catch (JsonProcessingException e)
@@ -113,7 +113,7 @@ public class FileFilterApplication
             String fileFilterJson = mapper.writeValueAsString(fileFilter);
 
             this.systemEventService.logSystemEvent(fileFilter.getClientId() +"_"+ fileFilter.getCriteria(),
-                String.format("File Filter created [%s]", fileFilterJson), UserUtil.getUser()
+                "File Filter created [%s]".formatted(fileFilterJson), UserUtil.getUser()
                                                   );
         }
         catch (JsonProcessingException e)
